@@ -70,6 +70,8 @@ VERSION 2.8-Beta 1
      not to fool users.
 
   BUGFIXES:
+   * Fix a problem where ghost tracks would remain in the Local Collection until the
+     database is wiped. (BR 319084)
    * Added missing CMake check for QtWebKit. (BR 321598)
    * Definitely fix a bug where Local Collection wouldn't update in browser. (BR 262504)
    * Fix crashed caused by race conditions at the end of the track scanning. (BR 319835)
